# DRF_Courses

./: README.md  docker-compose.yaml  pyproject.toml  users_data.json
config/: celery.py  settings.py  urls.py
courses/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_rename_owner_course_user_rename_owner_lesson_user.py  0004_subscription.py  0005_alter_subscription_course_alter_subscription_user.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py  fill_payments.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_city_and_more.py  0003_payment.py  0004_alter_payment_payment_date.py  0005_alter_payment_payment_date.py  0006_alter_payment_payment_date.py  0007_alter_payment_payment_date.py  0008_payment_link_payment_session_id_and_more.py  0009_alter_payment_payment_date.py  0010_alter_payment_payment_date.py  0011_payment_product.py
